--- a/firstapi/package.json
+++ b/firstapi/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "cross-env PORT=3001 NODE_ENV=development DEBUG=firstapi:* nodemon"
+    "dev": "cross-env NODE_ENV=development DEBUG=firstapi:* nodemon",
+    "installDB": "node ./lib/install_db"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
